@@ -20,6 +20,7 @@ Changes in 4.0beta2:
 - Fix compilation not working on solaris due to missing NAME_MAX define (222598)
 - Fix check for existing files for single file torrents in FileSelectDlg (225900)
 - Add pathOnDisk dbus call on a torrent to retrieve the output path
+- Fix crash in GroupView (226134)
 
 Changes in 4.0beta1:
 - Make adding multiple trackers at once possible (213194) 
